# SDNet

./: .gitignore  pyproject.toml
Models/: Layers.py
Utils/: CoQAPreprocess.py  CoQAUtils.py  GeneralUtils.py
