[project]
name = "sdnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "msgpack",
    "pandas>=0.25",
    "torch",
    "tqdm",
    "spacy>=2.0, <3.0",
    "numpy>=1.0, <2.0"
]

[dependency-groups]
dev = [
    "pip>=25.3",
]
